# hilt

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
doc/: README_KR.md  changelog.md  requirements.md
include/: bridge.h  config.h
src/: bridge.cpp  config.c  main.c
tests/: test_bridge.c
